enable illegal access